# personal-cpp

./: .drone.yml  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
include/: number_comparison_lib.h
src/: filtering_program.cpp  main.cpp  name_and_score.cpp  number_guesser.cpp  playing_with_numbers.cpp  playing_with_numbers_v2.cpp  stringing.cpp
